--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@wordpress/scripts": "^27.2.0"
 	},
 	"dependencies": {
+		"@wordpress/blob": "^3.51.0",
 		"@wordpress/components": "^26.0.1"
 	}
 }
